--- a/gradle.properties
+++ b/gradle.properties
@@ -11,6 +11,11 @@
 # The setting is particularly useful for tweaking memory settings.
 org.gradle.jvmargs=-Xmx1536m
 
+org.gradle.daemon=true
+org.gradle.parallel=true
+
+API_KEY = "0f4813b07b3a6aa68a3d632f384f7faa"
+
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
