Added a horizontally scrollable RV for images

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,6 +16,11 @@ org.gradle.parallel=true
 
 API_KEY = "0f4813b07b3a6aa68a3d632f384f7faa"
 
+RELEASE_STORE_FILE=C:\\Users\\Adrian\\OneDrive\\UdacityProjects\\Projects\\PopularMovies\\popmovieskey
+RELEASE_STORE_PASSWORD=takstein333
+RELEASE_KEY_ALIAS=popmovies
+RELEASE_KEY_PASSWORD=return
+
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
